# noc_inference

./: .gitattributes  .gitignore  MANIFEST.in  README.md  __init__.py  batch.py  config.py  pyproject.toml  setup.py
checkpoints/: checkpoint_step_42952.pt
code/con_noccai_v7/: __init__.py  predictor.py
con_noccai_v7/: label_map.py  model.py  preprocessing.py  requirements.txt  run_inference.py
noc_inference/: batch.py  config.py
noc_inference/data/: noc_2021_merged_clean.csv
